--- a/index.html
+++ b/index.html
@@ -518,8 +518,7 @@
             <div class="cta-container">
                 <h2 style="color: #2c5aa0; margin-bottom: 1rem;">Ready to Start Your Journey?</h2>
                 <p style="font-size: 1.2rem; margin-bottom: 2rem; color: #666;">Join the Big Bear Business Expedition and transform your business idea into reality. Your summit awaits!</p>
-                <a href="mailto:matt@bigbearchamber.com?subject=Big Bear Business Expedition Signup&body=Hi Matt! I'd like to join the Big Bear Business Expedition. Please sign me up!" class="cta-button">
-                    🚀 Start My Expedition Today
+<a href="https://popvoxmatt.github.io/businesssummit/day_1.html"></a>                    🚀 Start My Expedition Today
                 </a>
                 <p style="margin-top: 1rem; color: #666; font-size: 0.9rem;">
                     <em>Next expedition starts Monday - limited spots available!</em>
