--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             <h1>🏔️ Big Bear Business Expedition</h1>
             <p class="subtitle">Your 15-Day Guided Journey to Business Peak</p>
             <p class="description">Join fellow entrepreneurs on an exciting expedition to build your business from the ground up. No experience required - just bring your dreams and determination!</p>
-            <a href="day_1.html" class="cta-button">🎒 Start Your Expedition</a>
+            <a href="https://popvoxmatt.github.io/businesssummit/day_1.html" class="cta-button">🎒 Start Your Expedition</a>
         </div>
     </section>
 
