--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
             <p class="subtitle">Your 15-Day Guided Journey to Business Peak</p>
             <p class="description">Join fellow entrepreneurs on an exciting expedition to build your business from the ground up. No experience required - just bring your dreams and determination!</p>
             <a href="https://popvoxmatt.github.io/businesssummit/day_1.html" class="cta-button">🎒 Start Your Expedition</a>
+              <a href="https://popvoxmatt.github.io/businesssummit/welcome_email.pdf" class="cta-button">🎒 Welcome Email</a>
         </div>
     </section>
 
