--- a/index.html
+++ b/index.html
@@ -334,8 +334,6 @@
             <h1>🏔️ Big Bear Business Expedition</h1>
             <p class="subtitle">Your 15-Day Guided Journey to Business Peak</p>
             <p class="description">Join fellow entrepreneurs on an exciting expedition to build your business from the ground up. No experience required - just bring your dreams and determination!</p>
-            <a href="https://popvoxmatt.github.io/businesssummit/day_1.html" class="cta-button">🎒 Start Your Expedition</a>
-              <a href="https://popvoxmatt.github.io/businesssummit/welcome_email.pdf" class="cta-button">🎒 Welcome Email</a>
         </div>
     </section>
 
@@ -367,7 +365,7 @@
                 <div class="feature-card">
                     <span class="feature-icon">🤝</span>
                     <h3 class="feature-title">Expert Guidance</h3>
-                    <p>Get personal mentorship from Matt Vecchio, successful Big Bear business owner and Chamber member.</p>
+                    <p>Get personal mentorship from experienced business owners and Chamber members who've built successful ventures.</p>
                 </div>
                 <div class="feature-card">
                     <span class="feature-icon">🏆</span>
@@ -485,10 +483,10 @@
 
                 <div class="faq-item">
                     <div class="faq-question" onclick="toggleFAQ(this)">
-                        Who is Matt Vecchio and why should I trust his guidance?
+                        Who will be leading this expedition?
                     </div>
                     <div class="faq-answer">
-                        Matt is the owner of Mountain Room Escapes, a successful escape room business in Big Bear. He's also an active Chamber member who has helped multiple local entrepreneurs launch and grow their businesses. This expedition is based on real-world experience, not just theory.
+                        This expedition is led by experienced local business owners and Chamber members who have successfully built and scaled their own ventures in the Big Bear community. You'll get real-world guidance from people who understand the local business landscape.
                     </div>
                 </div>
 
@@ -506,7 +504,7 @@
                         Can I get support if I have questions during the expedition?
                     </div>
                     <div class="faq-answer">
-                        Absolutely! You can reply to any daily expedition email with questions, and Matt personally responds within 24 hours. Think of him as your personal expedition guide who's committed to helping you reach the summit.
+                        Absolutely! You can reply to any daily expedition email with questions, and our expedition guides personally respond within 24 hours. Think of us as your personal expedition support team committed to helping you reach the summit.
                     </div>
                 </div>
             </div>
@@ -519,8 +517,14 @@
             <div class="cta-container">
                 <h2 style="color: #2c5aa0; margin-bottom: 1rem;">Ready to Start Your Journey?</h2>
                 <p style="font-size: 1.2rem; margin-bottom: 2rem; color: #666;">Join the Big Bear Business Expedition and transform your business idea into reality. Your summit awaits!</p>
-<a href="https://popvoxmatt.github.io/businesssummit/day_1.html"></a>                    🚀 Start My Expedition Today
-                </a>
+                <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+                    <a href="https://popvoxmatt.github.io/businesssummit/welcome_email.pdf" class="cta-button">
+                        📧 Get Welcome Email
+                    </a>
+                    <a href="https://popvoxmatt.github.io/businesssummit/day_1.html" class="cta-button">
+                        🚀 Preview Day 1
+                    </a>
+                </div>
                 <p style="margin-top: 1rem; color: #666; font-size: 0.9rem;">
                     <em>Next expedition starts Monday - limited spots available!</em>
                 </p>
