--- a/day_1.html
+++ b/day_1.html
@@ -546,8 +546,8 @@
 
                 <div style="margin-top: 2rem; padding: 1rem; background: #f8f9fa; border-radius: 8px;">
                     <strong>Questions?</strong><br>
-                    Email Matt directly:<br>
-                    <a href="mailto:matt@bigbearchamber.com">matt@bigbearchamber.com</a>
+                    Contact the Chamber:<br>
+                    <a href="mailto:contact@bigbearchamber.com">contact@bigbearchamber.com</a>
                 </div>
             </div>
         </div>
