--- a/day_1.html
+++ b/day_1.html
@@ -508,7 +508,7 @@
                 <!-- Page Navigation -->
                 <div class="page-nav">
                     <div class="nav-btn disabled">← Previous Day</div>
-                    <a href="/business-expedition" class="nav-btn">📚 Course Home</a>
+                    <a href="/businesssummit" class="nav-btn">📚 Course Home</a>
                     <div class="nav-btn disabled">Next Day →</div>
                 </div>
             </div>
