--- a/day_1.html
+++ b/day_1.html
@@ -403,7 +403,7 @@
 
     <!-- Breadcrumb -->
     <div class="breadcrumb">
-        <a href="/">Home</a> > <a href="https://popvoxmatt.github.io/businesssummit/">Business Expedition</a> > Day 1: Packing Your Vision
+        <a href="/">Home</a> > <a href="/business-expedition">Business Expedition</a> > Day 1: Packing Your Vision
     </div>
 
     <div class="container">
@@ -451,10 +451,13 @@
                     </div>
                     
                     <div class="video-container">
-                        <div class="video-placeholder">
-                            <div class="play-button"></div>
-                            <div>Welcome to Base Camp + Vision Clarity Exercise</div>
-                        </div>
+                        <iframe width="100%" height="100%" 
+                        src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen
+                        style="position: absolute; top: 0; left: 0; border-radius: 10px;">
+                        </iframe>
                     </div>
                     
                     <div class="video-info">
@@ -508,7 +511,7 @@
                 <!-- Page Navigation -->
                 <div class="page-nav">
                     <div class="nav-btn disabled">← Previous Day</div>
-                    <a href="/businesssummit" class="nav-btn">📚 Course Home</a>
+                    <a href="/business-expedition" class="nav-btn">📚 Course Home</a>
                     <div class="nav-btn disabled">Next Day →</div>
                 </div>
             </div>
