--- a/day_1.html
+++ b/day_1.html
@@ -403,7 +403,7 @@
 
     <!-- Breadcrumb -->
     <div class="breadcrumb">
-        <a href="/">Home</a> > <a href="/business-expedition">Business Expedition</a> > Day 1: Packing Your Vision
+        <a href="/">Home</a> > <a href="/businesssummit">Business Expedition</a> > Day 1: Packing Your Vision
     </div>
 
     <div class="container">
