--- a/day_1.html
+++ b/day_1.html
@@ -451,13 +451,11 @@
                     </div>
                     
                     <div class="video-container">
-                        <iframe width="100%" height="100%" 
-                        src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
-                        frameborder="0" 
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                        allowfullscreen
-                        style="position: absolute; top: 0; left: 0; border-radius: 10px;">
-                        </iframe>
+                        <video width="100%" height="100%" controls 
+                        style="position: absolute; top: 0; left: 0; border-radius: 10px; object-fit: cover;">
+                            <source src="https://popvoxmatt.github.io/businesssummit/Business%20Bootcamp.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
                     </div>
                     
                     <div class="video-info">
@@ -511,7 +509,7 @@
                 <!-- Page Navigation -->
                 <div class="page-nav">
                     <div class="nav-btn disabled">← Previous Day</div>
-                    <a href="/business-expedition" class="nav-btn">📚 Course Home</a>
+                    <a href="/businesssummit" class="nav-btn">📚 Course Home</a>
                     <div class="nav-btn disabled">Next Day →</div>
                 </div>
             </div>
