--- a/day_1.html
+++ b/day_1.html
@@ -451,11 +451,11 @@
                     </div>
                     
                     <div class="video-container">
-                        <video width="100%" height="100%" controls 
-                        style="position: absolute; top: 0; left: 0; border-radius: 10px; object-fit: cover;">
-                            <source src="https://popvoxmatt.github.io/businesssummit/Business%20Bootcamp.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                        <iframe src="https://drive.google.com/file/d/1OMdMGkbuUtoTqkUgG-1eWqynwvjpswdt/preview" 
+                        width="100%" height="100%" 
+                        allow="autoplay"
+                        style="position: absolute; top: 0; left: 0; border-radius: 10px; border: none;">
+                        </iframe>
                     </div>
                     
                     <div class="video-info">
